My first commit

--- a/PhonologixTesting/.project
+++ b/PhonologixTesting/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StartBrowser</name>
+	<name>PhonologixTesting</name>
 	<comment></comment>
 	<projects>
 	</projects>
